Updates to make the itinerary layouts semi-functional

--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@ javascript:
   - js/front-page.js
 ---
 
-<div id="front-page">
-  <h1>Itineraries</h1>
-  <ul class="itineraries clearfix">
-    {% for post in site.posts %}
-      <li style="background-image: url('{{ post.tile_image }}');">
-        <!-- <span>{{ post.date | date_to_string }}</span>  -->
-        <a href="{{ post.url }}">{{ post.title }}</a>
-      </li>
-    {% endfor %}
-  </ul>
-  <h1>Day Trips</h1>
-  <ul class="day-trips">
+<div class="container">
+  <div id="front-page">
+    <h1>Itineraries</h1>
+    <ul class="itineraries clearfix">
+      {% for post in site.posts %}
+        <li style="background-image: url('{{ post.tile_image }}');">
+          <!-- <span>{{ post.date | date_to_string }}</span>  -->
+          <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
+      {% endfor %}
+    </ul>
+    <h1>Day Trips</h1>
+    <ul class="day-trips">
 
-  </ul>
-  <h1>Brewery Tours</h1>
-  <ul class="brewery-tours">
+    </ul>
+    <h1>Brewery Tours</h1>
+    <ul class="brewery-tours">
 
-  </ul>
+    </ul>
+  </div>
 </div>
