Updates to front-page and elsewhere.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ javascript:
 <div class="container">
   <div id="front-page">
     <h1>Itineraries</h1>
-    <ul class="itineraries clearfix">
+    <ul class="itineraries image-carousel clearfix">
       {% for post in site.posts %}
         <li style="background-image: url('{{ post.tile_image }}');">
           <!-- <span>{{ post.date | date_to_string }}</span>  -->
